--- a/index.html
+++ b/index.html
@@ -1,124 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario con HTML5</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-
-<body>
-    <div clas="formulario">
-        <div classs="paymentForExample">
-            <h2>Payment form example</h2>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Formulario</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="card">
+        <div class="card-header">
+          Payment for example
         </div>
-        <div class="dosYTres">
-            <div class="someFieldAreMissing">
-                <h4>Some fields are missing</h4>
-            </div>
-            <div class="creditcard">
-                <div class="card#">
-                    <form>
-                        <div class="row mb-3">
-                            <label for="inputCard#" class="col-sm-2 col-form-label">Card #</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="inputCard#" placeholder="XXXXXXXXXXXXXXXX">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="cvc#">
-                    <form>
-                        <div class="row mb-3">
-                            <label for="inputCVC#" class="col-sm-2 col-form-label">CVC #</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="inputCVC#" placeholder="0000">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="amount">
-                    <form>
-                        <div class="row mb-3">
-                            <label for="inputEmail3" class="col-sm-2 col-form-label">Amount $</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="inputAmount" placeholder="Amount">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="dosCuadros">
-                <div class="cuadroIzquierdo">
-                    <div class="firstName">
-                        <form>
-                            <div class="row mb-3">
-                                <label for="inputFirstName" class="col-sm-2 col-form-label">First Name</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" id="inputFirstName">
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="city">
-                        <form>
-                            <div class="row mb-3">
-                                <label for="inputCity" class="col-sm-2 col-form-label">City</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" id="inputCity">
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="weAccept">
-                        <h5>We accept</h5>
-                        <div class="mediosDePago form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                            <label class="form-check-label" for="inlineCheckbox1"><i class="fa-brands fa-cc-mastercard"></i></label>
-                            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                            <label class="form-check-label" for="inlineCheckbox2"><i class="fa-brands fa-cc-visa"></i></label>
-                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                            <label class="form-check-label" for="inlineCheckbox1"><i class="fa-brands fa-cc-diners-club"></i></label>
-                            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                            <label class="form-check-label" for="inlineCheckbox2"><i class="fa-brands fa-cc-apple-pay"></i></label>
-                          </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="cuadroDerecho">
-                    <div class="lastName">
-                        <form>
-                            <div class="row mb-3">
-                                <label for="inputLastName" class="col-sm-2 col-form-label">Last Name</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" id="inputLastName">
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="statePostalCode">
-                        <div class="state">
-                            
-                        </div>
-                        <div class="postalCode">
-                            <form>
-                                <div class="row mb-3">
-                                    <label for="inputPostaCode" class="col-sm-2 col-form-label">Postal Code</label>
-                                    <div class="col-sm-10">
-                                        <input type="text" class="form-control" id="inputPostalCode">
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="message"></div>
-                </div>
-            </div>
-            <div class="cancelSend"></div>
+        <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
         </div>
+        <form>
+            <div class="form-row">
+                <div class="col-7">
+                  <input type="text" class="form-control" placeholder="xxxx-xxxx-xxxx-xxxx">
+                </div>
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="0000">
+                </div>
+                
+              </div>
 
-</body>
-
+        </form>
+      </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+  </body>
 </html>
