--- a/index.html
+++ b/index.html
@@ -1,32 +1,59 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Formulario</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-  </head>
-  <body>
-    <div class="card">
-        <div class="card-header">
-          Payment for example
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-        </div>
-        <form>
-            <div class="form-row">
-                <div class="col-7">
-                  <input type="text" class="form-control" placeholder="xxxx-xxxx-xxxx-xxxx">
-                </div>
-                <div class="col">
-                  <input type="text" class="form-control" placeholder="0000">
-                </div>
-                
-              </div>
 
-        </form>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Formulario</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+</head>
+
+<body>
+  <div class="card">
+    <div class="card-header">
+      <h1 class="fs-5">Payment for example</h1>
+    </div>
+    <div class="card-body">
+      <div class="bg-danger">Special title treatment</div>
+    </div>
+    <form>
+      <div class="row">
+        <div class="col-sm-12 col-md-4 col-lg-8 mb-3">
+          <label for="validationCustom01">Card #</label>
+          <input type="text" class="form-control" id="validationCustom01" placeholder="xxxx-xxxx-xxxx-xxxx">
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-2 mb-3">
+          <label for="validationCustom02">CVC #</label>
+          <input type="text" class="form-control" id="validationCustom02" placeholder="0000">
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-2 mb-3">
+          <label for="validationCustom02">Amount</label>
+          <input type="text" class="form-control" id="validationCustom02" placeholder="Amount">
+        </div>
       </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-  </body>
+      <div class="row">
+        <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
+          <label for="validationCustom02">First Name</label>
+          <input type="text" class="form-control" id="validationCustom02">
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
+          <label for="validationCustom02">Last Name</label>
+          <input type="text" class="form-control" id="validationCustom02">
+      </div>
+  </div>
+  
+  
+
+
+
+
+
+    </form>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
