--- a/index.html
+++ b/index.html
@@ -7,53 +7,114 @@
   <title>Formulario</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-  <div class="card">
-    <div class="card-header">
-      <h1 class="fs-5">Payment for example</h1>
-    </div>
-    <div class="card-body">
-      <div class="bg-danger">Special title treatment</div>
-    </div>
-    <form>
-      <div class="row">
-        <div class="col-sm-12 col-md-4 col-lg-8 mb-3">
-          <label for="validationCustom01">Card #</label>
-          <input type="text" class="form-control" id="validationCustom01" placeholder="xxxx-xxxx-xxxx-xxxx">
+  <div class="container pt-3">
+    <div class="card">
+      <div class="card-header">
+        <h1 class="fs-3">Payment for example</h1>
+      </div>
+      <div class="card-body">
+        <div class="alert alert-danger" role="alert"> Some fields are missing</div>
+      </div>
+      <form class="p-3">
+        <div class="row">
+          <div class="col-sm-12 col-md-4 col-lg-8 mb-3">
+            <label for="validationCustom01">Card #</label>
+            <input type="text" class="form-control" id="validationCustom01" placeholder="xxxx-xxxx-xxxx-xxxx">
+          </div>
+          <div class="col-sm-12 col-md-4 col-lg-2 mb-3">
+            <label for="validationCustom02">CVC #</label>
+            <input type="text" class="form-control" id="validationCustom02" placeholder="0000">
+          </div>
+          <div class="col-sm-12 col-md-4 col-lg-2 mb-2">
+            <br>
+            <label class="sr-only" for="inlineFormInputGroupUsername2">Amount</label>
+            <div class="input-group mb-2 mr-sm-1">
+              <div class="input-group-prepend">
+                <div class="input-group-text">$</div>
+              </div>
+              <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Amount">
+            </div>
+          </div>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-2 mb-3">
-          <label for="validationCustom02">CVC #</label>
-          <input type="text" class="form-control" id="validationCustom02" placeholder="0000">
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
+            <label for="validationCustom02">First Name</label>
+            <input type="text" class="form-control" id="validationCustom02">
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
+            <label for="validationCustom02">Last Name</label>
+            <input type="text" class="form-control" id="validationCustom02">
+          </div>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-2 mb-3">
-          <label for="validationCustom02">Amount</label>
-          <input type="text" class="form-control" id="validationCustom02" placeholder="Amount">
+        <div class="row">
+          <div class="col-sm-12 col-md-4 col-lg-7 mb-3">
+            <label for="validationCustom01">City</label>
+            <input type="text" class="form-control" id="validationCustom01">
+          </div>
+          <div class="col-sm-12 col-md-4 col-lg-3 mb-3">
+            <label class="mr-2" for="inlineFormCustomSelectPref">State</label>
+            <select id="inputState" class="form-control">
+              <option selected>Pick a State</option>
+              <option value="1">Texas</option>
+              <option value="2">Colorado</option>
+              <option value="3">California</option>
+            </select>
+          </div>
+          <div class="col-sm-12 col-md-4 col-lg-2 mb-3">
+            <label for="validationCustom02">Postal Code</label>
+            <input type="text" class="form-control" id="validationCustom02">
+          </div>
+          <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
+              <h6 class="d-block">We accept:</h6>
+              <div class="d-inline-flex bg-secondary border">
+                <div class="form-check m-2">
+                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                  <label class="form-check-label" for="flexRadioDefault1"><i class="fa-brands fa-cc-visa"></i></label>
+                </div>
+                <div class="form-check m-2">
+                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                  <label class="form-check-label" for="flexRadioDefault1"><i
+                      class="fa-brands fa-cc-mastercard"></i></label>
+                </div>
+                <div class="form-check m-2">
+                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                  <label class="form-check-label" for="flexRadioDefault1"><i
+                      class="fa-brands fa-cc-diners-club"></i></label>
+                </div>
+                <div class="form-check m-2">
+                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                  <label class="form-check-label" for="flexRadioDefault1"><i
+                      class="fa-brands fa-cc-apple-pay"></i></label>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-6-mb-3">
+              <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <h6 class="text-secondary">Add any notes here</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
+      <div class="card-footer text-muted">
+        <div class="d-flex justify-content-end gap-4">
+          <button type="button" class="btn btn-secondary">Cancel</button>
+          <button type="button" class="btn btn-primary">Send</button>
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
-          <label for="validationCustom02">First Name</label>
-          <input type="text" class="form-control" id="validationCustom02">
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
-          <label for="validationCustom02">Last Name</label>
-          <input type="text" class="form-control" id="validationCustom02">
-      </div>
-  </div>
-  
-  
-
-
-
-
-
-    </form>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-    crossorigin="anonymous"></script>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
